unpackaged/main/default/objects/Case/fields/Reason_Code_Product_Sub_Categories__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code_Product_Sub_Categories__c</fullName>
    <label>Reason Code Product Sub-Categories</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Sub_detail__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bath Products</fullName>
            </value>
            <value>
                <fullName>Bedding Products</fullName>
            </value>
            <value>
                <fullName>Belts</fullName>
            </value>
            <value>
                <fullName>Coats/Jackets</fullName>
            </value>
            <value>
                <fullName>Cold Weather</fullName>
            </value>
            <value>
                <fullName>Décor/Accessories</fullName>
            </value>
            <value>
                <fullName>Dinnerware</fullName>
            </value>
            <value>
                <fullName>Eyewear</fullName>
            </value>
            <value>
                <fullName>Formal Wear</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Goggles</fullName>
            </value>
            <value>
                <fullName>Handbags</fullName>
            </value>
            <value>
                <fullName>Jewelry</fullName>
            </value>
            <value>
                <fullName>Kids Footwear</fullName>
            </value>
            <value>
                <fullName>Mens Footwear</fullName>
            </value>
            <value>
                <fullName>Mens Suiting</fullName>
            </value>
            <value>
                <fullName>Men’s Underwear</fullName>
            </value>
            <value>
                <fullName>Overcoats</fullName>
            </value>
            <value>
                <fullName>Rugs</fullName>
            </value>
            <value>
                <fullName>Slippers</fullName>
            </value>
            <value>
                <fullName>Small Goods</fullName>
            </value>
            <value>
                <fullName>Socks/Tights</fullName>
            </value>
            <value>
                <fullName>Swim Caps</fullName>
            </value>
            <value>
                <fullName>Swim Shoes</fullName>
            </value>
            <value>
                <fullName>Swimwear Type - Elite/LZR Competition</fullName>
            </value>
            <value>
                <fullName>Swimwear Type - General Swimwear</fullName>
            </value>
            <value>
                <fullName>Third-Party Vendor - Amazon</fullName>
                <label>Third-Party Vendor-Amazon</label>
            </value>
            <value>
                <fullName>Third-Party Vendor - Costco</fullName>
                <label>Third-Party Vendor-Costco</label>
            </value>
            <value>
                <fullName>Third-Party Vendor - Dick’s Sporting Goods</fullName>
                <label>Third-Party Vendor-Dick’s Sporting Goods</label>
            </value>
            <value>
                <fullName>Third-Party Vendor - Elsmore Swim Shop</fullName>
                <label>Third-Party Vendor-Elsmore Swim Shop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>