unpackaged/main/default/objects/Case/fields/Reason_Sub_detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_Sub_detail__c</fullName>
    <label>Reason Sub-detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Code_Details__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Activewear</fullName>
            </value>
            <value>
                <fullName>Advertisement Feedback</fullName>
            </value>
            <value>
                <fullName>Associate Behavior</fullName>
            </value>
            <value>
                <fullName>Bags/Wallets</fullName>
            </value>
            <value>
                <fullName>Bottoms</fullName>
            </value>
            <value>
                <fullName>Canadian Return Policy</fullName>
            </value>
            <value>
                <fullName>Carrier Claim</fullName>
            </value>
            <value>
                <fullName>Checkout/Cart</fullName>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Cosmetic Products</fullName>
            </value>
            <value>
                <fullName>Customer Injury</fullName>
            </value>
            <value>
                <fullName>Customer Profiling</fullName>
            </value>
            <value>
                <fullName>Damaged Package</fullName>
            </value>
            <value>
                <fullName>Dead Hyperlink</fullName>
            </value>
            <value>
                <fullName>Delivered Not Received</fullName>
            </value>
            <value>
                <fullName>Dresses/Skirts</fullName>
            </value>
            <value>
                <fullName>Dress Shirts</fullName>
            </value>
            <value>
                <fullName>Editorial Feedback</fullName>
            </value>
            <value>
                <fullName>Employment Opportunities</fullName>
            </value>
            <value>
                <fullName>Employment Verification</fullName>
            </value>
            <value>
                <fullName>Express Shipping Delays</fullName>
            </value>
            <value>
                <fullName>Fashion Event Request</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Final Sale Inquiry</fullName>
            </value>
            <value>
                <fullName>Fit &amp; Sizing Question</fullName>
            </value>
            <value>
                <fullName>Footwear</fullName>
            </value>
            <value>
                <fullName>Fragrances</fullName>
            </value>
            <value>
                <fullName>General Sponsorship</fullName>
            </value>
            <value>
                <fullName>Gift Return/Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>