unpackaged/main/default/objects/Case/fields/Rectified_Data__c.field-meta.xml
<CustomField>
    <fullName>Rectified_Data__c</fullName>
    <label>Rectified Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>