unpackaged/main/default/objects/Case/fields/ReferenceID__c.field-meta.xml
<CustomField>
    <fullName>ReferenceID__c</fullName>
    <description>ReferenceID to be attached in mail that will attach the reply to respective case.</description>
    <formula>&quot;ref:_&quot; &amp; LEFT( $Organization.Id ,5) &amp; SUBSTITUTE(RIGHT( $Organization.Id ,10), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReferenceID</label>
    <type>Text</type>
</CustomField>