unpackaged/main/default/objects/Case/fields/Resolution_Code__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code__c</fullName>
    <label>Resolution Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Rejected Request</fullName>
            </value>
            <value>
                <fullName>No Response to follow-up</fullName>
            </value>
            <value>
                <fullName>Data Not Found</fullName>
            </value>
            <value>
                <fullName>User Data Provided</fullName>
            </value>
            <value>
                <fullName>User Data Deleted</fullName>
            </value>
            <value>
                <fullName>User Data Corrected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>