unpackaged/main/default/objects/Case/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <description>Resolution Time for Case for Milestone</description>
    <formula>IF( NOT(ISNULL(Resolved_Date__c)),
TEXT( 
FLOOR(Resolved_Date__c - CreatedDate) 
) &amp; &quot; Days, &quot; &amp; 
TEXT( 
FLOOR(MOD((Resolved_Date__c - CreatedDate)*24,24)) 
) &amp;&quot; Hours, &quot; &amp; 
TEXT( 
ROUND(MOD((Resolved_Date__c - CreatedDate)*1440,60),0) 
) &amp;&quot; Minutes&quot;
, &#39;N/A&#39;)</formula>
    <label>Resolution Time</label>
    <type>Text</type>
</CustomField>