unpackaged/main/default/objects/Case/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>The date the Case Status hits resolved. If the customer re-opens the Case and then the Case is resolved, it&#39;s the more recent Resolved Date.</description>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>