unpackaged/main/default/objects/Case/fields/Retail_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Retail_Reasons__c</fullName>
    <label>Retail Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate Discount</fullName>
            </value>
            <value>
                <fullName>Cash Discrepancy</fullName>
            </value>
            <value>
                <fullName>Customer Warning</fullName>
            </value>
            <value>
                <fullName>Incident Report</fullName>
            </value>
            <value>
                <fullName>Locate Product</fullName>
            </value>
            <value>
                <fullName>Loyalty (Bulk Buying)</fullName>
            </value>
            <value>
                <fullName>Loyalty (General)</fullName>
            </value>
            <value>
                <fullName>Loyalty (Technical)</fullName>
            </value>
            <value>
                <fullName>Order (E-Commerce)</fullName>
            </value>
            <value>
                <fullName>Order (Special Order)</fullName>
            </value>
            <value>
                <fullName>Return (Credit Card)</fullName>
            </value>
            <value>
                <fullName>Return (General)</fullName>
            </value>
            <value>
                <fullName>Return (Klarna)</fullName>
            </value>
            <value>
                <fullName>Return (PayPal)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>