unpackaged/main/default/objects/Case/fields/Return_Label_Description__c.field-meta.xml
<CustomField>
    <fullName>Return_Label_Description__c</fullName>
    <description>Agent will manually add the return label description</description>
    <label>Return Label Description</label>
    <length>35</length>
    <type>Text</type>
</CustomField>