unpackaged/main/default/objects/Case/fields/Reward_Change_Details__c.field-meta.xml
<CustomField>
    <fullName>Reward_Change_Details__c</fullName>
    <label>Reward Change Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reward_Change_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Disqualification</fullName>
            </value>
            <value>
                <fullName>Store Processed Manual Accommodation</fullName>
            </value>
            <value>
                <fullName>Online Transaction Manual Accommodation</fullName>
            </value>
            <value>
                <fullName>Customer Distance</fullName>
            </value>
            <value>
                <fullName>Customer Sick</fullName>
            </value>
            <value>
                <fullName>Customer Traveling</fullName>
            </value>
            <value>
                <fullName>Outside of Country</fullName>
            </value>
            <value>
                <fullName>Did Not Receive Email</fullName>
            </value>
            <value>
                <fullName>Customer Accommodation</fullName>
            </value>
            <value>
                <fullName>Unable to Extend</fullName>
            </value>
            <value>
                <fullName>Gift Card Accommodation</fullName>
            </value>
            <value>
                <fullName>Adding Transaction</fullName>
            </value>
            <value>
                <fullName>Beyond Extension Period</fullName>
            </value>
            <value>
                <fullName>Signup Bonus Points Issue</fullName>
            </value>
            <value>
                <fullName>Double Points Promo</fullName>
            </value>
            <value>
                <fullName>Triple Points Promo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>