unpackaged/main/default/objects/Case/fields/Reward_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Reward_Change_Type__c</fullName>
    <label>Reward Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expire</fullName>
            </value>
            <value>
                <fullName>Redeem</fullName>
            </value>
            <value>
                <fullName>Extend</fullName>
            </value>
            <value>
                <fullName>AccommodationPoints</fullName>
                <label>Accommodation Points</label>
            </value>
            <value>
                <fullName>AddDollarCoupon</fullName>
                <isActive>false</isActive>
                <label>AddDollarCoupon</label>
            </value>
            <value>
                <fullName>AddPercentCoupon</fullName>
                <isActive>false</isActive>
                <label>AddPercentCoupon</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>