unpackaged/main/default/objects/Case/fields/Reward_Number__c.field-meta.xml
<CustomField>
    <fullName>Reward_Number__c</fullName>
    <label>Reward Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>