unpackaged/main/default/objects/Case/fields/RewardId__c.field-meta.xml
<CustomField>
    <fullName>RewardId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RewardId</label>
    <referenceTo>Reward__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>