unpackaged/main/default/objects/Case/fields/Run_Assignment_Rule__c.field-meta.xml
<CustomField>
    <fullName>Run_Assignment_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Assignment Rule</label>
    <type>Checkbox</type>
</CustomField>