unpackaged/main/default/objects/Case/fields/Shipment_Return_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Return_Name__c</fullName>
    <formula>Brand_Lookup_Search__c&amp;&quot; Returns&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipment Return Name</label>
    <type>Text</type>
</CustomField>