unpackaged/main/default/objects/Case/fields/SkillName__c.field-meta.xml
<CustomField>
    <fullName>SkillName__c</fullName>
    <label>SkillName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>