unpackaged/main/default/objects/Case/fields/Sku_Style_Number__c.field-meta.xml
<CustomField>
    <fullName>Sku_Style_Number__c</fullName>
    <label>SKU/Style Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>