unpackaged/main/default/objects/Case/fields/State_of_Residence_READONLY__c.field-meta.xml
<CustomField>
    <fullName>State_of_Residence_READONLY__c</fullName>
    <description>This READONLY field is created to store customers original details filled through web form</description>
    <label>State of Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>