unpackaged/main/default/objects/Case/fields/Store_Master__c.field-meta.xml
<CustomField>
    <fullName>Store_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Brand__c</field>
            <operation>equals</operation>
            <valueField>StoreMaster__c.Brand__c</valueField>
        </filterItems>
        <filterItems>
            <field>StoreMaster__c.Status__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>StoreMaster__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>