unpackaged/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Availability Questions</fullName>
            </value>
            <value>
                <fullName>Quality Concerns</fullName>
            </value>
            <value>
                <fullName>Sizing Questions</fullName>
            </value>
            <value>
                <fullName>Care Instructions</fullName>
            </value>
            <value>
                <fullName>Product Feedback</fullName>
            </value>
            <value>
                <fullName>Problem Placing Order</fullName>
            </value>
            <value>
                <fullName>Tracking Order Shipment</fullName>
            </value>
            <value>
                <fullName>Edit Existing Order</fullName>
            </value>
            <value>
                <fullName>Cancel Order</fullName>
            </value>
            <value>
                <fullName>Missing/Damaged Product</fullName>
            </value>
            <value>
                <fullName>Return Policy</fullName>
            </value>
            <value>
                <fullName>Returning Order</fullName>
            </value>
            <value>
                <fullName>Creating Return Label</fullName>
            </value>
            <value>
                <fullName>Tracking Return</fullName>
            </value>
            <value>
                <fullName>Return Status</fullName>
            </value>
            <value>
                <fullName>Signing Up</fullName>
            </value>
            <value>
                <fullName>Program Questions</fullName>
            </value>
            <value>
                <fullName>Adding Points</fullName>
            </value>
            <value>
                <fullName>Redeeming Rewards</fullName>
            </value>
            <value>
                <fullName>Account Balance</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>Update Information</fullName>
            </value>
            <value>
                <fullName>Problem Receiving</fullName>
            </value>
            <value>
                <fullName>Unsubscribe</fullName>
            </value>
            <value>
                <fullName>Access My Data</fullName>
            </value>
            <value>
                <fullName>Delete My Data</fullName>
            </value>
            <value>
                <fullName>Data Owner Request</fullName>
            </value>
            <value>
                <fullName>Privacy Email</fullName>
            </value>
            <value>
                <fullName>Rectify My Data</fullName>
            </value>
            <value>
                <fullName>Do Not Sell/Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>