unpackaged/main/default/objects/Case/fields/Sub_Type_READONLY__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_READONLY__c</fullName>
    <description>This READONLY field is created to store customers original details filled through web form</description>
    <label>Sub-Type-READONLY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>