unpackaged/main/default/objects/Case/fields/SubscriberValidationToken__c.field-meta.xml
<CustomField>
    <fullName>SubscriberValidationToken__c</fullName>
    <label>SubscriberValidationToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>