unpackaged/main/default/objects/Case/fields/Supervisor_Data_Validation_Override__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Data_Validation_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supervisor Data Validation Override</label>
    <type>Checkbox</type>
</CustomField>