unpackaged/main/default/objects/Case/fields/Supplied_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplied_First_Name__c</fullName>
    <description>Supplied First Name</description>
    <label>Supplied First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>