unpackaged/main/default/objects/Case/fields/Supplied_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplied_Last_Name__c</fullName>
    <label>Supplied Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>