unpackaged/main/default/objects/Case/fields/Support_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone_Number__c</fullName>
    <formula>IF(
 AND(
 ISPICKVAL( Brand__c , &#39;2&#39;),
 ISPICKVAL(Channel__c, &#39;CalvinKlein.us&#39;)), &quot;866-513-0513&quot;,

IF(
 AND(
 ISPICKVAL( Brand__c , &#39;2&#39;),
 ISPICKVAL(Channel__c, &#39;CalvinKlein.ca&#39;)), &quot;800-376-0528&quot;,

IF(
 AND(
 ISPICKVAL( Brand__c , &#39;2&#39;),
 ISPICKVAL(Channel__c, &#39;Calvin Klein Retail&#39;)), &quot;866-214-6694&quot;,


IF(
 AND(
 ISPICKVAL( Brand__c , &#39;1&#39;),
 ISPICKVAL(Channel__c, &#39;Tommy.com&#39;)), &quot;888-866-6948&quot;,

IF(
 AND(
 ISPICKVAL( Brand__c , &#39;1&#39;),
 ISPICKVAL(Channel__c, &#39;Tommy Hilfiger Retail&#39;)), &quot;800-866-6922&quot;,


IF(
 AND(
 ISPICKVAL( Brand__c , &#39;5&#39;),
 ISPICKVAL(Channel__c, &#39;VanHeusen.com&#39;)), &quot;866-378-9545&quot;,

IF(
 AND(
 ISPICKVAL( Brand__c , &#39;5&#39;),
 ISPICKVAL(Channel__c, &#39;Van Heusen Retail&#39;)), &quot;800-388-9122&quot;,

IF(
 AND(
 ISPICKVAL( Brand__c , &#39;83&#39;),
 OR(ISPICKVAL(Channel__c, &#39;Van Heusen Retail&#39;),ISPICKVAL(Channel__c, &#39;Warner.com&#39;))), &quot;866-378-9545&quot;,

IF(
 AND(
 OR(ISPICKVAL( Brand__c , &#39;4&#39;), ISPICKVAL( Brand__c , &#39;81&#39;)),
 ISPICKVAL(Channel__c, &#39;Izod.com&#39;)), &quot;866-378-9545&quot;,


IF(
 ISPICKVAL( Brand__c , &#39;7&#39;), &quot;888-477-3336&quot;,

IF(
 OR(ISPICKVAL( Brand__c , &#39;8&#39;),ISPICKVAL( Brand__c , &#39;9&#39;)), &quot;866-378-9545&quot;,

IF(
 AND(
 OR(ISPICKVAL( Brand__c , &#39;83&#39;), ISPICKVAL( Brand__c , &#39;10&#39;)),
 ISPICKVAL(Channel__c, &#39;Other Retailer&#39;)), &quot;800-423-4313&quot;,

IF(
 AND(
 OR(ISPICKVAL( Brand__c , &#39;4&#39;), ISPICKVAL( Brand__c , &#39;5&#39;), ISPICKVAL( Brand__c , &#39;1&#39;), ISPICKVAL( 
 Brand__c , &#39;2&#39;), ISPICKVAL( Brand__c , &#39;81&#39;)),
 ISPICKVAL(Channel__c, &#39;Other Retailer&#39;)), &quot;800-770-6858&quot;,

&quot;&quot;

)))))))))))))</formula>
    <label>Support Phone Number</label>
    <type>Text</type>
</CustomField>