unpackaged/main/default/objects/Case/fields/Suppress_Survey__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Survey</label>
    <type>Checkbox</type>
</CustomField>