unpackaged/main/default/objects/Case/fields/Suspicious_Activity_Alert__c.field-meta.xml
<CustomField>
    <fullName>Suspicious_Activity_Alert__c</fullName>
    <formula>Account.Fraud__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suspicious Activity Alert</label>
    <type>Checkbox</type>
</CustomField>