unpackaged/main/default/objects/Case/fields/Tealium_Email_Suppression__c.field-meta.xml
<CustomField>
    <fullName>Tealium_Email_Suppression__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tealium Email Suppression</label>
    <type>Checkbox</type>
</CustomField>