unpackaged/main/default/objects/Case/fields/Third_Party_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Vendors__c</fullName>
    <label>Third Party Vendors</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Code_Product_Sub_Categories_Widge__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Costco</fullName>
            </value>
            <value>
                <fullName>Dick&#39;s Sporting Goods</fullName>
            </value>
            <value>
                <fullName>Elsmore Swim Shop</fullName>
            </value>
            <value>
                <fullName>Men&#39;s Swim Shop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Swim Outlet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>