unpackaged/main/default/objects/Case/fields/Tommy_Adaptive__c.field-meta.xml
<CustomField>
    <fullName>Tommy_Adaptive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tommy Adaptive</label>
    <type>Checkbox</type>
</CustomField>