unpackaged/main/default/objects/Case/fields/Total_Active_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Time__c</fullName>
    <label>Total Active Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>