unpackaged/main/default/objects/Case/fields/Total_On_Hold_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_On_Hold_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total On-Hold Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>